Isomorphic Node server example code pretty much done.

--- a/bin/index.html
+++ b/bin/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="" />
 </head>
 <body>
+	<!-- SERVERCONTENT -->
 	<script src="mithril.min.js"></script>
 	<script src="mithril.js"></script>
 </body>
