Updated build files and docs.

--- a/bin/index.html
+++ b/bin/index.html
@@ -6,6 +6,8 @@
 	<meta name="description" content="" />
 </head>
 <body>
+	<!-- For the isomorphic example, the next line will be replaced with the 
+	     server-side generated HTML: -->
 	<!-- SERVERCONTENT -->
 	<script src="mithril.min.js"></script>
 	<script src="mithril.js"></script>
