Factorizing the webshop example.

--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -53,7 +53,7 @@
     <div class="container-fluid">
       <div class="row">
         <div id="navigation" class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
+          <!-- ul class="nav nav-sidebar">
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Reports</a></li>
             <li><a href="#">Analytics</a></li>
@@ -70,12 +70,10 @@
             <li><a href="">Nav item again</a></li>
             <li><a href="">One more nav</a></li>
             <li><a href="">Another nav item</a></li>
-          </ul>
+          </ul -->
         </div>
         <div id="content" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
-
-          <div class="row placeholders">
+          <!-- div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
               <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
               <h4>Label</h4>
@@ -96,7 +94,7 @@
               <h4>Label</h4>
               <span class="text-muted">Something else</span>
             </div>
-          </div>
+          </div -->
 
           <h2 class="sub-header">Section title</h2>
           <div class="table-responsive">
