--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -10,7 +10,7 @@
     <title>Dashboard Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap.min.css">
 	<!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" -->
 
     <!-- Custom styles for this template -->
@@ -130,14 +130,13 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/mithril/0.1.24/mithril.min.js"></script>
-	<script src="docs.min.js"></script>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+	<script src="jquery-1.11.0.min.js"></script>
+	<script src="bootstrap.min.js"></script>
+	<script src="mithril.js"></script>
+	<!-- script src="docs.min.js"></script -->
 	<script src="webshop.js"></script>
   </body>
 </html>
