--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -21,6 +21,12 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      #search > ul {
+        right: 15px;
+        top: 40px;
+      }
+    </style>
   </head>
 
   <body>
@@ -37,9 +43,15 @@
           <a class="navbar-brand" href="#">Mithril Webshop</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
+          <form id="search" class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
+            <ul class="dropdown-menu dropdown-menu-right" role="menu">
+              <li role="presentation">
+                <a role="menuitem" tabindex="-1" href="#">Action</a>
+              </li>
+            </ul>
           </form>
+
           <ul id="shopping-cart" class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Shopping cart <span class="caret"></span></a>
