--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -148,7 +148,7 @@
 	<script src="jquery-1.11.0.min.js"></script>
 	<script src="bootstrap.min.js"></script>
 	<script src="mithril.js"></script>
-	<!-- script src="docs.min.js"></script -->
+	<script src="docs.min.js"></script>
 	<script src="webshop.js"></script>
   </body>
 </html>
