Cleanup, Mithril updated to 0.1.28 View methods are now returning the last expression automatically.

--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -69,7 +69,7 @@
   <!-- Placed at the end of the document so the pages load faster -->
 	<script src="jquery-1.11.0.min.js"></script>
 	<script src="bootstrap.min.js"></script>
-	<script src="mithril.js"></script>
+	<script src="mithril.min.js"></script>
 	<script src="docs.min.js"></script>
 	<script src="webshop.js"></script>
   </body>
