Webshop now has a live demo.

--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -10,9 +10,8 @@
     <title>Dashboard Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="bootstrap.min.css">
-	<!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" -->
-
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+      
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
 
@@ -30,7 +29,6 @@
   </head>
 
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -64,13 +62,10 @@
       </div>
     </div>
 
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-	<script src="jquery-1.11.0.min.js"></script>
-	<script src="bootstrap.min.js"></script>
-	<script src="../mithril.min.js"></script>
-	<script src="docs.min.js"></script>
-	<script src="webshop.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/mithril/0.2.0/mithril.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.8.0/holder.min.js"></script>
+    <script src="webshop.js"></script>
   </body>
 </html>
