--- a/bin/index.html
+++ b/bin/index.html
@@ -6,10 +6,9 @@
 	<meta name="description" content="" />
 </head>
 <body>
-	<!-- For the isomorphic example, the next line will be replaced with the 
-	     server-side generated HTML: -->
+	<!-- For the isomorphic example, the next line will be replaced with the server-side generated HTML: -->
 	<!-- SERVERCONTENT -->
-	<script src="mithril.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/0.2.0/mithril.min.js"></script>
 	<script src="mithril.js"></script>
 </body>
 </html>
