Fixed node.js rendering example. Renamed VirtualElement to Vnodes. More cleanup.

--- a/bin/index.html
+++ b/bin/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>mithril</title>
+	<title>Mithril Demo</title>
 	<meta name="description" content="" />
 </head>
 <body>
 	<!-- For the isomorphic example, the next line will be replaced with the server-side generated HTML: -->
 	<!-- SERVERCONTENT -->
-	<script src="mithril.dist.js"></script>
-	<script src="mithril.js"></script>
+	<script src="https://unpkg.com/mithril@1.0.0/mithril.js"></script>
+	<script src="/app.js"></script>
 </body>
 </html>
