--- a/bin/index.html
+++ b/bin/index.html
@@ -6,9 +6,9 @@
 	<meta name="description" content="" />
 </head>
 <body>
-	<!-- For the isomorphic example, the next line will be replaced with the server-side generated HTML: -->
+	<!-- For the isomorphic example, the next line will be replaced with the server-side generated HTML -->
 	<!-- SERVERCONTENT -->
 	<script src="https://unpkg.com/mithril@1.0.0/mithril.js"></script>
-	<script src="/app.js"></script>
+	<script src="/client.js"></script>
 </body>
 </html>
