--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <!-- script src="https://code.jquery.com/jquery-1.11.3.min.js"></script -->
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/mithril@1.0.0/mithril.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.8.0/holder.min.js"></script>
