Converting examples to 2.0.

--- a/bin/webshop/index.html
+++ b/bin/webshop/index.html
@@ -64,7 +64,7 @@
 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/mithril@1.1.6/mithril.js"></script>
+    <script src="https://unpkg.com/mithril/mithril.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.8.0/holder.min.js"></script>
     <script src="webshop.js"></script>
   </body>
