--- a/bin/index.html
+++ b/bin/index.html
@@ -8,7 +8,7 @@
 <body>
 	<!-- For the isomorphic example, the next line will be replaced with the server-side generated HTML -->
 	<!-- SERVERCONTENT -->
-	<script src="https://unpkg.com/mithril@1.0.0/mithril.js"></script>
+	<script src="https://unpkg.com/mithril/mithril.js"></script>
 	<script src="/client.js"></script>
 </body>
 </html>
